# LanguaeTest

./: package-lock.json  package.json  readme.md
assets/: LanguageSortValidation.ts  main.scene  test.scene
assets/font/: font.scene
assets/icu/: icu-label.ts  rtl-visual-wrap.ts
extensions/icu-main/: icu-worker.mjs  main.js  package.json
native/engine/win64/: CMakeLists.txt
scripts/: capture_texteditor_refs.js  crop_reference_images.js  download_reference_images.sh  import_reference_images.sh  text_cases.json  鍙傝€冨浘鐢熸垚璇存槑.md
